completed all pages and features, added download table feature to predictions

--- a/DataAnalysis.ipynb
+++ b/DataAnalysis.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,6 +29,24 @@
     "import matplotlib.image as mpimg\n",
     "import matplotlib.pyplot as plt\n",
     "import cv2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Num GPUs Available:  0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "print(\"Num GPUs Available: \", len(tf.config.list_physical_devices('GPU')))"
    ]
   },
   {
@@ -240,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4
  },
