added files for deployment to heroku

--- a/Model.ipynb
+++ b/Model.ipynb
@@ -293,6 +293,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.5064306855201721,\n",
+       " 0.09017984569072723,\n",
+       " 0.03114370070397854,\n",
+       " 0.02833946794271469,\n",
+       " 0.06906741112470627,\n",
+       " 0.03771459311246872,\n",
+       " 0.011627034284174442,\n",
+       " 0.12075530737638474,\n",
+       " 0.043629828840494156,\n",
+       " 0.022786961868405342,\n",
+       " 0.07113171368837357,\n",
+       " 0.06136927381157875,\n",
+       " 0.03283128887414932,\n",
+       " 0.03262981027364731,\n",
+       " 0.009694256819784641]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loaded_history['loss']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
