final deploy config for v1 of app

--- a/DataCollection.ipynb
+++ b/DataCollection.ipynb
@@ -13,12 +13,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "collect data of leaf samples from companies product set ![kaggel](https://www.kaggle.com/datasets/codeinstitute/cherry-leaves)"
+    "collect data of leaf samples from companies product set [kaggel](https://www.kaggle.com/datasets/codeinstitute/cherry-leaves)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,18 +65,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are 2104 healthy leaves\n",
-      "There are 2104 sick leaves\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f'There are {len(os.listdir(source_healthy_path))} healthy leaves')\n",
     "\n",
@@ -93,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,20 +95,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(256, 256, 3)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sample_image_healthy.shape"
    ]
@@ -132,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,20 +208,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "./cherry-leaves/training/healthy/\n",
-      "./cherry-leaves/validation/healthy/\n",
-      "./cherry-leaves/training/sick/\n",
-      "./cherry-leaves/validation/sick/\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(train_healthy_dir)\n",
     "print(test_healthy_dir)\n",
@@ -251,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,20 +231,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are 180 images of healthy for training\n",
-      "There are 180 images of sick for training\n",
-      "There are 20 images of healthy for validation\n",
-      "There are 20 images of sick for validation\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"There are {len(os.listdir(train_healthy_dir))} images of healthy for training\")\n",
     "print(f\"There are {len(os.listdir(train_sick_dir))} images of sick for training\")\n",
